# Credit_Card_Fraud_Detection

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  mlflow.db  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci-cd.yaml
configs/: config.yaml
infra/: ecs.tf  main.tf  network.tf  outputs.tf  variables.tf
mlruns/1/models/m-0c92bfdd05c847e2b19a0e272dc0238b/artifacts/: MLmodel  conda.yaml  model.ubj
mlruns/1/models/m-b6c251e6726042cc9c03f7027a87c9aa/artifacts/: MLmodel
models/: model.joblib  scaler.joblib
scripts/: deploy.sh
src/data/: __init__.py  data_pipeline.py
src/models/: evaluator.py  trainer.py
src/monitoring/: drift_monitor.py
src/serving/: app.py
src/utils/: config.py  logger.py
tests/integration/: test_api.py
tests/unit/: test_data_pipeline.py  test_model.py
